# vsf

./: .gitignore  AGENT.md  CHANGES.txt  Cargo.toml  LICENSE  README.md  build.rs  builder_example.vsf  diff.txt  example_raw.vsf  test_sample.vsf
examples/: builder_pattern_example.rs  comprehensive_raw.rs  compress_file.rs  create_raw_image.rs  create_test_vsf.rs  minimal_raw.rs  test_offset_units.rs  test_signing.rs  test_vsf_huffman.rs  verification_example.rs
src/: builders.rs  colour_constants.rs  colour_convert.rs  crypto_algorithms.rs  file_format.rs  lib.rs  main.rs  oldlib.rs  text_encoding.rs  verification.rs  vsf_builder.rs
src/decoding/: helpers.rs  metadata.rs  mod.rs  oldmod.rs  parse.rs  primitives.rs  spirix.rs  tensors.rs  traits.rs
src/encoding/: flatten.rs  mod.rs  primitives.rs  traits.rs
src/types/: eagle_time_type.rs  mod.rs  tensor.rs  vsf_type.rs  world_coord.rs
tools/: derive_vsf_rgb.rs
